--- a/iron-comments/styles/style.css
+++ b/iron-comments/styles/style.css
@@ -3,9 +3,26 @@ body {
     margin: 0;
     padding-top: 100px;
     width: 100vw;    
+    background-color: rgb(25, 33, 41);
 
 }
 
 #form-container {
+    padding: 25px;
+    width: 250px; 
+    display: flex;
+    flex-direction: column;
     margin: auto;
+    background-color: rgb(25, 33, 41);
+    border: solid 2px rgb(67, 163, 230);
+    color: rgb(255,255,255);
+}
+.blue-btn{
+    background-color: rgb(67, 163, 230);
+    color: rgb(255,255,255);
+    border: solid 2px rgb(67, 163, 230);
+    padding: 5px 15px;
+    margin: 10px;
+    width: fit-content;
+    border-radius: 5px;
 }
