--- a/iron-comments/styles/style.css
+++ b/iron-comments/styles/style.css
@@ -16,6 +16,7 @@ body {
     background-color: rgb(25, 33, 41);
     border: solid 2px rgb(67, 163, 230);
     color: rgb(255,255,255);
+    gap: 10px;
 }
 .blue-btn{
     background-color: rgb(67, 163, 230);
@@ -25,4 +26,9 @@ body {
     margin: 10px;
     width: fit-content;
     border-radius: 5px;
+}
+fieldset {
+    border: none;
+    padding: 0;
+    margin: 0;
 }
